--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>Awalnur - CV and Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/lineicons.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/slick.css">
+    <link rel="stylesheet" href="/assets/css/lineicons.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/default.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
 <!--[if IE]>
@@ -41,7 +41,7 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/images/logo.svg" alt="Logo">
+                            <img src="/assets/images/logo.svg" alt="Logo">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -101,7 +101,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-7">
                     <div class="header_hero_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s"
                          data-wow-delay="1.8s">
-                        <img src="assets/images/hero.png" alt="hero">
+                        <img src="/assets/images/hero.png" alt="hero">
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 col-md-9">
                 <div class="about_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
-                    <img src="assets/images/about_hero.png" alt="Hero">
+                    <img src="/assets/images/about_hero.png" alt="Hero">
                     <div class="about_shape"></div>
                 </div>
             </div>
@@ -325,7 +325,7 @@
             <div class="col-lg-4">
                 <div class="single_project">
                     <div class="project_image">
-                        <img src="assets/images/project-3.jpg" alt="project">
+                        <img src="/assets/images/project-3.jpg" alt="project">
                     </div>
                     <div class="project_content">
                         <h4 class="project_title"><a href="#">Creative Agency Landing page</a></h4>
@@ -336,7 +336,7 @@
             <div class="col-lg-4">
                 <div class="single_project ">
                     <div class="project_image">
-                        <img src="assets/images/project-1.jpg" alt="project">
+                        <img src="/assets/images/project-1.jpg" alt="project">
                     </div>
                     <div class="project_content">
                         <h4 class="project_title"><a href="#">App Landing Page</a></h4>
@@ -347,7 +347,7 @@
             <div class="col-lg-4">
                 <div class="single_project">
                     <div class="project_image">
-                        <img src="assets/images/project-2.jpg" alt="project">
+                        <img src="/assets/images/project-2.jpg" alt="project">
                     </div>
                     <div class="project_content"><h4>Search Engine Optimization</a></h4>
                         <p>Digital Marketing</p>
@@ -357,7 +357,7 @@
             <div class="col-lg-4">
                 <div class="single_project">
                     <div class="project_image">
-                        <img src="assets/images/project-1.jpg" alt="project">
+                        <img src="/assets/images/project-1.jpg" alt="project">
                     </div>
                     <div class="project_content">
                         <h4 class="project_title"><a href="#">HTML/CSS Coding</a></h4>
@@ -372,7 +372,7 @@
 
 <section id="pricing" class="pricing_area gray-bg pt-115 pb-120">
     <div class="pricing_shape">
-        <img src="assets/images/shape-3.png" alt="shape">
+        <img src="/assets/images/shape-3.png" alt="shape">
     </div>
     <div class="container">
         <div class="row justify-content-center">
@@ -480,7 +480,7 @@
             <div class="col-lg-6">
                 <div class="single_testimonial d-sm-flex mt-30">
                     <div class="testimonial_author">
-                        <img src="assets/images/author-1.jpg" alt="author">
+                        <img src="/assets/images/author-1.jpg" alt="author">
                     </div>
                     <div class="testimonial_content media-body">
                         <h4 class="author_name">Rob Hope</h4>
@@ -500,7 +500,7 @@
             <div class="col-lg-6">
                 <div class="single_testimonial d-sm-flex mt-30">
                     <div class="testimonial_author">
-                        <img src="assets/images/author-2.jpg" alt="author">
+                        <img src="/assets/images/author-2.jpg" alt="author">
                     </div>
                     <div class="testimonial_content media-body">
                         <h4 class="author_name">Elon Musk</h4>
@@ -520,7 +520,7 @@
             <div class="col-lg-6">
                 <div class="single_testimonial d-sm-flex mt-30">
                     <div class="testimonial_author">
-                        <img src="assets/images/author-1.jpg" alt="author">
+                        <img src="/assets/images/author-1.jpg" alt="author">
                     </div>
                     <div class="testimonial_content media-body">
                         <h4 class="author_name">Musharof Chowdhury</h4>
@@ -733,7 +733,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="footer_content text-center">
-                    <a href="#"><img src="assets/images/logo.svg" alt="Logo"></a>
+                    <a href="#"><img src="/assets/images/logo.svg" alt="Logo"></a>
                     <ul class="footer_social">
                         <li><a href="#"><i class="lni lni-facebook"></i></a></li>
                         <li><a href="#"><i class="lni lni-twitter"></i></a></li>
@@ -760,27 +760,27 @@
 
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-<script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
-<script src="assets/js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="/assets/js/vendor/jquery-1.12.4.min.js"></script>
+<script src="/assets/js/vendor/modernizr-3.7.1.min.js"></script>
 
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/popper.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
 
-<script src="assets/js/slick.min.js"></script>
+<script src="/assets/js/slick.min.js"></script>
 
-<script src="assets/js/ajax-contact.js"></script>
+<script src="/assets/js/ajax-contact.js"></script>
 
-<script src="assets/js/jquery.appear.min.js"></script>
+<script src="/assets/js/jquery.appear.min.js"></script>
 
-<script src="assets/js/waypoints.min.js"></script>
-<script src="assets/js/jquery.counterup.min.js"></script>
+<script src="/assets/js/waypoints.min.js"></script>
+<script src="/assets/js/jquery.counterup.min.js"></script>
 
-<script src="assets/js/jquery.easing.min.js"></script>
-<script src="assets/js/scrolling-nav.js"></script>
+<script src="/assets/js/jquery.easing.min.js"></script>
+<script src="/assets/js/scrolling-nav.js"></script>
 
-<script src="assets/js/wow.min.js"></script>
+<script src="/assets/js/wow.min.js"></script>
 
-<script src="assets/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
         data-cf-beacon='{"rayId":"698b8528cd154d7b","version":"2021.9.0","r":1,"token":"e30b4e5ca0154d28b74c094697cafe5d","si":100}'></script>
 </body>
