--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-7">
                     <div class="header_hero_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s"
                          data-wow-delay="1.8s">
-                        <img src="assets/images/hero.png" alt="hero">
+                        <img src="assets/images/hero2.png" alt="hero">
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 col-md-9">
                 <div class="about_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
-                    <img src="assets/images/about_hero.png" alt="Hero">
+                    <img src="assets/images/about_hero2.png" alt="Hero">
                     <div class="about_shape"></div>
                 </div>
             </div>
@@ -697,14 +697,13 @@
                 <div class="col-lg-12">
                     <div class="call_to_action_box d-md-flex justify-content-between align-items-center">
                         <div class="call_to_action_content">
-                            <h3 class="action_title">Have Any Project in Mind?</h3>
+                            <h3 class="action_title">Ada ide untuk membuat proyek ?</h3>
                             <ul class="line">
                                 <li></li>
                                 <li></li>
                                 <li></li>
                             </ul>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr sed diam non eirmod tempor
-                                invidunt labore.</p>
+                            <p></p>
                         </div>
                         <div class="call_to_action_btn">
                             <a href="awal.n.deriyanto@gmail.com"
