--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                                 <li class="nav-item">
                                     <a class="page-scroll" href="#project">Portfolio<span></span></a>
                                 </li>
-                                <li class="nav-item">
+<!--                                 <li class="nav-item">
                                     <a class="page-scroll" href="#pricing">Pricing<span></span></a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="page-scroll" href="#work">Experience<span></span></a>
                                 </li>
